--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,14 +1,14 @@
 ### set log levels ### 
-log4j.rootLogger = info , Console , D
+log4j.rootLogger=DEBUG, Console  
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 log4j.logger.java.sql.ResultSet=INFO
 log4j.logger.org.apache=INFO
-log4j.logger.java.sql.Connection=INFO
-log4j.logger.java.sql.Statement=INFO
-log4j.logger.java.sql.PreparedStatement=INFO
+log4j.logger.java.sql.Connection=debug
+log4j.logger.java.sql.Statement=debug
+log4j.logger.java.sql.PreparedStatement=debug
 #output2file
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender 
 log4j.appender.D.File = D\:/logs/log.log 
@@ -17,11 +17,11 @@ log4j.appender.D.Threshold = INFO \#\# \u8F93\u51FAinfo\u7EA7\u522B\u4EE5\u4E0A\
 log4j.appender.D.layout = org.apache.log4j.PatternLayout 
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [ %t\:%r ] - [ %p ] %m%n 
 #mybatis日志
-log4j.logger.com.ibatis=debug
-log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=debug
-log4j.logger.com.ibatis.common.jdbc.ScriptRunner=debug
-log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=debug
-log4j.logger.java.sql.Connection=debug
-log4j.logger.java.sql.Statement=debug
-log4j.logger.java.sql.PreparedStatement=debug
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
  
